--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.my-facebook-button-class {
+  background-color: #3b5998; /* สีฟ้า Facebook */
+  color: white; /* ข้อความสีขาว */
+  border-radius: 5px;
+  font-weight: bold;
+  border: 0;
+  display: block;
+  width: 50%;
+  cursor: pointer;
+  white-space: nowrap;
+  text-align: center;
+  padding: 10px 0; /* เพิ่มขนาด padding ทำให้ปุ่มดูสูงขึ้น */
+}
+
+.my-facebook-button-class:hover {
+  background-color: #334d84; /* สีฟ้าที่เข้มขึ้นเมื่อ hover */
+}
